Added hotels + team updates

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -331,11 +331,12 @@
                     <div class="popup">
                         <h4>Peter Kuterna</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Crafting software in Android/Java.</p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/peterkuterna" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/peterkuterna" class="btn_twitter">Twitter</a>
+                            <a href="mailto:peter.kuterna@gmail.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -439,6 +440,7 @@
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/geertvanlandeghem‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/gvanlandeghem" class="btn_twitter">Twitter</a>
+                            <a href="mailto:gvl@foundation.be" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
