--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -62,7 +62,12 @@
 
                 <h4>Devoxx Hotels</h4>
 
-                To be announced
+                <ul class="linkList">
+                    <li><a href="http://www.tulipinnantwerpen.com">Tulip Inn Antwerpen</a> (7.7km)</li>
+                    <li><a href="http://www.hilton.com/en/hi/groups/personalized/A/ANRHITW-GDEVA-20131111/index.jhtml?WT.mc_id=POG">Hilton Antwerpen</a> (4.4km)</li>
+                    <li><a href="http://www.hiexpress.com/redirect?path=hd&brandCode=ex&localeCode=en&regionCode=1&hotelCode=ANRHE&_PMID=99502056&corpNum=954317702&blpu=true">Holiday Inn Express Antwerp City-North</a> (2.7km)</li>
+                    <li><a href="http://www.radissonblu.com/astridhotel-antwerp">Radisson blu</a> (4.2km)</li>
+                </ul>
 
             </div>
             <div class="col4">
