Shorten HTML5 promo text

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -82,7 +82,7 @@
                     
                         <h1>What you didn't know about HTML5</h1>
                         <h3>Tracks 2013</h3>
-                        <p>Server-side web development isn't hot anymore. Learn about the new breed of client side frameworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
+                        <p>Learn about the new breed of JS webframeworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
                         <a href="#/" class="btn" scroll="tracks">All tracks</a>
                         
                     </div>
