Updated Stephen bio

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -68,7 +68,7 @@
                     <div class="popup">
                         <h4>Jo Voordeckers</h4>
 
-                        <p>Enjoys a good challenge, learning and teaching new technologies, loves building UIs and make apps scale. </p>
+                        <p>Enjoys a good challenge, learning and teaching new technologies, loves building UIs and make apps scale</p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/jovoordeckers" class="btn_linkedin">LinkedIn</a>
@@ -84,7 +84,7 @@
                     <div class="popup">
                         <h4>Jan-Kees Van Andel</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://nl.linkedin.com/in/jankeesvanandel" class="btn_linkedin">LinkedIn</a>
@@ -132,7 +132,7 @@
                     <div class="popup">
                         <h4>Tim Peeters</h4>
 
-                        <p>Technical Architect at Xplore addicted to Java with a focus on JBoss.</p>
+                        <p>Technical Architect at Xplore addicted to Java with a focus on JBoss</p>
 
                         <div class="links clearfix">
                             <a href="https://www.facebook.com/tim.peeters" class="btn_facebook">Facebook</a>
@@ -149,7 +149,7 @@
                     <div class="popup">
                         <h4>Louis Jacomet</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/ljacomet" class="btn_linkedin">LinkedIn</a>
@@ -164,7 +164,7 @@
                     <div class="popup">
                         <h4>Kristien Leyn</h4>
 
-                        <p>All-rounder that takes care of sponsors, accountancy, venue, logistics and much more.</p>
+                        <p>All-rounder that takes care of sponsors, accountancy, venue, logistics and much more</p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/pub/kristien-leyn/12/556/b4" class="btn_linkedin">LinkedIn</a>
@@ -179,7 +179,7 @@
                     <div class="popup">
                         <h4>Johan Vos</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/johanvos" class="btn_linkedin">LinkedIn</a>
@@ -194,7 +194,7 @@
                     <div class="popup">
                         <h4>Alex Van Boxel</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/alexvanboxel‎" class="btn_linkedin">LinkedIn</a>
@@ -209,7 +209,7 @@
                     <div class="popup">
                         <h4>Sam Buls</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/pub/sam-buls/19/118/a45" class="btn_linkedin">LinkedIn</a>
@@ -223,7 +223,7 @@
                     <div class="popup">
                         <h4>Stijn van den Ende</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="https://twitter.com/stieno" class="btn_twitter">Twitter</a>
@@ -237,7 +237,7 @@
                     <div class="popup">
                         <h4>Luc Duponcheel</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/pub/luc-duponcheel/1/366/6b7‎" class="btn_linkedin">LinkedIn</a>
@@ -268,7 +268,7 @@
                     <div class="popup">
                         <h4>David Delabassee</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
@@ -284,7 +284,7 @@
                     <div class="popup">
                         <h4>Dan Hardiker</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
@@ -316,11 +316,13 @@
                     <div class="popup">
                         <h4>Stephen Chin</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p> Stephen is a Java Technology Ambassador at Oracle and the new JavaOne Content Chair</p>
 
                         <div class="links clearfix">
+                            <a href="https://www.facebook.com/steveonjava" class="btn_facebook">Facebook</a>
                             <a href="http://www.linkedin.com/in/steveonjava‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/steveonjava" class="btn_twitter">Twitter</a>
+                            <a href="mailto:steveonjava@gmail.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -331,7 +333,7 @@
                     <div class="popup">
                         <h4>Peter Kuterna</h4>
 
-                        <p>Crafting software in Android/Java.</p>
+                        <p>Crafting software in Android/Java</p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/peterkuterna" class="btn_linkedin">LinkedIn</a>
@@ -347,7 +349,7 @@
                     <div class="popup">
                         <h4>Alexis Moussine-Pouchkine</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://fr.linkedin.com/pub/alexis-moussine-pouchkine/8/51a/4b2" class="btn_linkedin">LinkedIn</a>
@@ -362,7 +364,7 @@
                     <div class="popup">
                         <h4>Hans Capelle</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                     </div>
                 </li>
@@ -373,7 +375,7 @@
                     <div class="popup">
                         <h4>Mike Seghers</h4>
 
-                        <p>Passionate Java/iOS developer, keen on software architecture in general.</p>
+                        <p>Passionate Java/iOS developer, keen on software architecture in general</p>
 
                         <div class="links clearfix">
                             <a href="http://www.linkedin.com/pub/dir/Mike/Seghers" class="btn_linkedin">LinkedIn</a>
@@ -405,7 +407,7 @@
                     <div class="popup">
                         <h4>Roy Van Rijn</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://nl.linkedin.com/in/royvanrijn" class="btn_linkedin">LinkedIn</a>
@@ -420,7 +422,7 @@
                     <div class="popup">
                         <h4>Steven Noels</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/stevenn‎" class="btn_linkedin">LinkedIn</a>
@@ -435,7 +437,7 @@
                     <div class="popup">
                         <h4>Geert Van Landeghem</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p></p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/geertvanlandeghem‎" class="btn_linkedin">LinkedIn</a>
