--- a/app/views/change_password.html
+++ b/app/views/change_password.html
@@ -39,7 +39,7 @@
                 <div class="col6 push6">
                     <ul>
                         <li class="btn">
-                            <input type="submit" name="" value="Register" ng-disabled="!passwordsMatch()">
+                            <input type="submit" name="" value="Update" ng-disabled="!passwordsMatch()">
                         </li>
                     </ul>
                 </div>
