--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -965,7 +965,7 @@ footer .sponsors a {
 /* @group Page: Venue */
 
 #topinfo {
-	padding: 140px 0 70px;
+	padding: 140px 0 0;
 }
 #topinfo h1 {
 	color: #fff;
@@ -985,7 +985,6 @@ footer .sponsors a {
 }
 
 #googlemap {
-	background: url(../images_dummy/gmap_dummy.jpg) no-repeat center;
 	height: 530px;
 }
 
