--- a/app/views/speaker/proposal_form.html
+++ b/app/views/speaker/proposal_form.html
@@ -2,10 +2,8 @@
     <div class="grid">
         <div class="row">
             <div class="col9">
-                <h1>last call for papers</h1>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.
-                    laoreet rutrum faucibus dolor auctor
-                    Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
+                <h1>Call for Papers</h1>
+                <h3>Submit your passion and make a difference @ Devoxx</h3>
             </div>
             <div class="col11">
                 <img src="../../images/topinfo_visual_call.png" class="visual" alt=""/>
