--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -229,6 +229,10 @@ div.selector.ng-invalid {
 
 /* 360 CSS Overrides */
 
+#topinfo {
+    padding: 140px 0 0 !important;
+}
+
 #tracks.area {
     padding: 0;
     padding-top: 100px;
@@ -244,8 +248,6 @@ div.selector.ng-invalid {
     background-color: #fff;
     color: #000;
 }
-
-
 
 #news li p a {
     color: #52b5bb;
