--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -199,7 +199,7 @@
 }
 
 .table .col1 {
-    width: 200px;
+    width: 215px;
 }
 
 .table .col2 {
@@ -362,4 +362,23 @@ div.selector.ng-invalid {
 
 .alert-info h4 {
   color: #3a87ad;
+}
+
+a.btn_edit {
+    background: url(../images/btn_edit.png) no-repeat 10px;
+    color: #000;
+    display: inline-block;
+    padding: 40px 25px 25px 30px;
+}
+a.btn_edit:hover {
+    background-color: #f5af33;
+}
+a.btn_delete {
+    background: url(../images/btn_delete.png) no-repeat 10px;
+    color: #000;
+    display: inline-block;
+    padding: 40px 25px 25px 30px;
+}
+a.btn_delete:hover {
+    background-color: #f5af33;
 }
