--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -161,7 +161,7 @@
                     <div class="popup">
                         <h4>Kristien Leyn</h4>
 
-                        <p>All-rounder that takes care of sponsors, accountancy, venue, logistics and much more</p>
+                        <p>All-rounder who takes care of sponsors, accountancy, venue, logistics and much more</p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/pub/kristien-leyn/12/556/b4" class="btn_linkedin">LinkedIn</a>
