--- a/app/views/speaker/proposals.html
+++ b/app/views/speaker/proposals.html
@@ -44,18 +44,10 @@
                     <h4 ng-show="!model.myProposals">Loading...</h4>
                     <h4 ng-show="model.myProposals.length == 0">No proposals</h4>
                     <table class="table" ng-show="model.myProposals.length > 0">
-                        <thead>
-                            <tr>
-                                <th class="col1">Event</th>
-                                <th class="col1">Title</th>
-                                <th class="col1">Status</th>
-                                <th class="col1"></th>
-                            </tr>
-                        </thead>
                         <tbody>
                             <tr ng-repeat="proposal in model.myProposals">
                                 <td class="col1">{{proposal.event.name}}</td>
-                                <td class="col1">{{proposal.title}}</td>
+                                <td class="col1" style="text-align: left">{{proposal.title}}</td>
                                 <td class="col1">{{proposal.state}}</td>
                                 <td class="col1">
                                     <a ng-click="editProposal(proposal)" class="btn_edit"></a>
