--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -8,7 +8,7 @@
             <div class="col11">
 
                 <h1>FAQ</h1>
-
+                <h3></h3>
             </div>
         </div>
 
@@ -34,15 +34,25 @@
                     <div class="acco_content">
                         <p>
                             Devoxx University is 350 Euro (2 days)<br>
-                            Devoxx Conference is 450 Euro (3 days)<br>
+                            Devoxx Conference is 470 Euro (3 days)<br>
                             Devoxx Combi ticket is 700 Euro (5 days)<br>
                             All prices are excluding 21% VAT<br>
-                            Every attendee receives full access to the Devoxx 2013 channel on Parleys.com!</p>
+                            Every attendee receives full access to the Devoxx 2013 channel on <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations">Parleys.com</a>!</p>
                         </div>
 
                     <h4 class="acco_title">Twitter</h4>
                     <div class="acco_content">
                         <p>Follow us on <a href="http://twitter.com/devoxx">Twitter</a> for real-time info.</p>
+                    </div>
+
+                    <h4 class="acco_title">Facebook</h4>
+                    <div class="acco_content">
+                        <p>Like us on <a href="http://facebook.com/devoxxcom">Facebook</a> and receive more detailed information about the different Devoxx editions.</p>
+                    </div>
+
+                    <h4 class="acco_title">Parleys.com</h4>
+                    <div class="acco_content">
+                        <p>Relive the many hundreds of Devoxx presentations on <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations">Parleys.com</a> including France and the UK.</p>
                     </div>
 
                     <h4 class="acco_title">Java User Groups</h4>
