Fixes #19 "Submit Talk" on home page should trigger a login

--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -279,6 +279,9 @@ div.selector.ng-invalid {
     margin: 0 200px 0 60px !important;
 }
 
+.visible {
+    display: block !important;
+}
 
 /* Flexible iFrame for Google Maps */
 
