Reduce label to fit on single line

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -35,7 +35,7 @@
                         <a href="#" data-filter=".Devices">Devices</a>
                     </li>
                     <li>
-                        <a href="#" data-filter=".Social">Social Events</a>
+                        <a href="#" data-filter=".Social">Events</a>
                     </li>
                     <li>
                         <a href="#" data-filter=".Media">Media</a>
