Added bio David

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -265,12 +265,13 @@
                     <div class="popup">
                         <h4>David Delabassee</h4>
 
-                        <p></p>
+                        <p>GlassFish and Java EE Principal Product Manager at Oracle</p>
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/pub/david-delabassee/13/48b/999" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/delabassee" class="btn_twitter">Twitter</a>
+                            <a href="mailto:david.delabassee@gmail.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
