--- a/app/views/speaker/speaker_details.html
+++ b/app/views/speaker/speaker_details.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col12">
 
-        <h4>Please update</h4>
+        <h4>Please complete</h4>
         <ul>
             <li>
                 <label for="speakerDetailsEmail">Email address</label>
