--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -177,11 +177,13 @@
                     <div class="popup">
                         <h4>Johan Vos</h4>
 
-                        <p></p>
+                        <p>Java Champion, JavaFX & JavaEE enthusiast, social software developer</p>
 
                         <div class="links clearfix">
+                            <a href="https://www.facebook.com/javafox" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/johanvos" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/johanvos‎" class="btn_twitter">Twitter</a>
+                            <a href="mailto:johan.vos@lodgon.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -363,8 +365,13 @@
                     <div class="popup">
                         <h4>Hans Capelle</h4>
 
-                        <p></p>
+                        <p>Independent Java & Android Developer at KBC Mobile Development Team</p>
 
+                        <div class="links clearfix">
+                            <a href="http://www.linkedin.com/in/hanscappelle" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/cappha" class="btn_twitter">Twitter</a>
+                            <a href="mailto:hans.cappelle@gmail.com" class="btn_mail">Maile me</a>
+                        </div>
                     </div>
                 </li>
                 <li class="Program Mobile CFP">
